# dbcquantum

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements-jupyter.txt  run_before_push.sh
.github/workflows/: build.yml  pytest.yml
doc/source/: conf.py
doc/source/apidoc/: dbcquantum.rst  modules.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/dbcquantum/: circuit.html  err.html  utils.html
docs/_sources/: index.rst.txt
docs/_sources/apidoc/: dbcquantum.circuit.rst.txt  dbcquantum.common.rst.txt  dbcquantum.err.rst.txt  dbcquantum.utils.rst.txt
docs/apidoc/: dbcquantum.circuit.html  dbcquantum.common.html  dbcquantum.err.html  dbcquantum.html  dbcquantum.utils.html  modules.html
example/hadamard_test/: fail.py  success.py
notebook/: max_size_test.ipynb
notebook/paper/: amplitude_amplification.ipynb  error_correction_bit_flip.ipynb  hadamard test.ipynb  qpe.ipynb  superdense_coding.ipynb
src/dbcquantum/: __init__.py  _mapping_utils.py  circuit.py  common.py  err.py  utils.py
src/test/example/: paper_qft.py  qft.py  test_amplitude_amplification.py  test_example_1.py  test_full_paper_hadamard.py  test_hadamard.py  test_paper_hadamard.py  test_paper_not.py  test_paper_qft.py  test_paper_qpe.py  test_qft.py  test_qpe.py
src/test/fqc/: test_FQCInstructionSet.py  test_QiskitInstructionSet.py  test_append_size.py  test_condition_iterable.py  test_eq_circuit.py  test_hint.py  test_infinite.py  test_inverse.py  test_measure.py  (+3 more)
(+11 files in other folders)
